# push_swap

./: .gitignore  CMakeLists.txt  Makefile  author  bash_git  checker.c  file.txt  list_functions.c  main.c  operations.c  push_swap  push_swap.h  useful_functions_forstack.c
checker_dir/: bonuses_checker.c  check_commands.c  checker.c  checker.h  list_functions_checker.c  operations_for_bothstacks_checker.c  operations_for_singlestack_checker.c  parsing_checker.c  useful_functions_forstack_checker.c
ft_printf/: Makefile  author  color_work.c  double.c  double1.c  double2.c  ft_char.c  ft_printf.c  ft_printf.h  ft_unsigneditoa_base.c  list_filling_functions.c  list_functions.c  output.c  output_bits.c  output_digital.c  parsing.c  pointer.c  string.c  usage_flags.c
libft/: Makefile  ft_dswap.c  ft_get_next_line.c  ft_itoa.c  ft_memchr.c  ft_min.c  ft_strjoin.c  (+1 more)
push_swap_checker/: CMakeLists.txt  Makefile  check_commands.c  checker.c  checker.h  file.txt  list_functions.c  operations_for_bothstacks.c  operations_for_singlestack.c  parsing.c  push_swap  push_swap.c  useful_functions_forstack.c
push_swap_checker/libft/: ft_atoi.c  ft_gnl.c  ft_ipow.c  ft_print_bits.c
push_swap_checker/libft/includes/: libft.h
push_swap_checker/push_swap.dSYM/Contents/Resources/DWARF/: push_swap
push_swap_pr/: CMakeLists.txt  Makefile  check_op.c  filling_op_point.c  functions_for_operations.c  list_functions.c  operations_for_bothstacks.c  operations_for_singlestack.c  parsing.c  pre_sort_stacks.c  push_swap  push_swap.c  push_swap.h  use_operations.c  useful_functions_forstack.c
push_swap_pr/libft/: ft_abs.c  ft_arrdel.c  ft_gnl.c  ft_itoa.c  ft_memchr.c  ft_mitoa.c
push_swap_pr/push_swap.dSYM/Contents/Resources/DWARF/: push_swap
(+111 files in other folders)
